# solutions-knowledge-base

./: .gitignore  README.md  pyproject.toml
.kiro/agents/: appian-parser.json
.kiro/settings/: cli.json  lsp.json  mcp.json
.kiro/steering/: appian-atlas-power.md
appian_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
appian_parser/: __init__.py  __main__.py  cli.py  diff_hash.py  package_reader.py  parser_registry.py  type_detector.py
appian_parser/dependencies/: __init__.py  analyzer.py
appian_parser/domain/: appian_type_resolver.py  constants.py  enums.py  field_walker.py  models.py
appian_parser/output/: app_overview_builder.py  bundle_builder.py  bundle_code_builder.py  bundle_coordinator.py  bundle_structure_builder.py  bundle_summarizer.py  json_dumper.py  manifest_builder.py  object_dependency_writer.py  orphan_writer.py  search_index_builder.py
appian_parser/parsers/: __init__.py  base_parser.py  (+15 more)
docs/: BEST_PRACTICES.md  DESIGN_Complete_Evaluation_Right_Panel_Tabs.md  GAM_KB_SETUP.md  OUTPUT_RESTRUCTURING_PLAN.md  PROJECT_OVERVIEW.md
mcp_server/: README.md  datasource.py  pyproject.toml  server.py
power-appian-parser/: mcp.json
prompts/: 00_shared_analysis_reference.md  01_actions.md  02_pages.md  03_processes.md  04_sites.md  05_web_apis.md  business_documentation_generator.md
sail/: AS_FM_captureUserContactDetails.sail
scripts/: validate_restructured_output.py
tests/: conftest.py  test_cli.py  test_diff_hash.py  test_field_walker.py  test_package_reader.py  test_type_detector.py
web/: README.md  app.py
(+13501 files in other folders)
