[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gam-appian-kb"
version = "1.0.0"
description = "MCP server for the GAM Appian Knowledge Base"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]

[project.scripts]
gam-appian-kb = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["mcp_server*"]
